--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="movingText">F*** YOU</div>
 
     <audio id="bgMusic" loop>
-        <source src="https://drive.google.com/uc?export=download&id=1c2mieZoLIlPJZXdpUF9M_BNl0sX55Q2s" type="audio/mpeg">
+        <source src="24.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
